Feature/ai (#71)
* Changes.

* Add AI integration features and settings for v1.3.0

- User-selectable AI columns via new tab in PkUuidSelectionDialog
- Configurable word count and request timeout for AI generation
- Fix AI client creation gated on applicationContext instead of settings
- Increase HTTP timeout and make it user-configurable (default 120s)
- Warn user when AI is enabled but application context is empty
- Fix progress bar not updating per-table during generation
- Log AI generation failures instead of silently swallowing them
- Responsive settings UI with scrollable panel and wrapping descriptions
- Update plugin.xml change-notes for version 1.3.0

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* Fix AI output sanitization and improve generation prompts

Reject AI refusal messages, strip echoed column names from output,
and add concrete examples to prompts for more reliable seed data.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* Fix empty catch block warnings with ignored naming convention

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* Delete AiSetupProgressDialog.java

* Enhance AI integration and refactor data generation pipeline

Improve OllamaClient with batch generation and retry logic, add auto-detect
SQL dialect from driver/URL, refactor RowGenerator and ValueGenerator for
cleaner architecture, update SchemaIntrospector with improved FK handling,
and add corresponding tests.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* Harden security, fix bugs, and expand test coverage

Migrate password storage to IntelliJ PasswordSafe with automatic legacy migration, quote all SQL identifiers in SchemaDsl to prevent injection, and escape backslashes in dialect SQL formatting. Fix JSON unescape ordering in OllamaClient, constraint length strict-less-than handling, UUID detection for Types.OTHER, integer overflow in bounds parsing, and async callback disposal guards. Add driver loading deduplication, ColumnPatt