@@ -5,6 +5,9 @@
 
 package com.luisppb16.dbseed.db.generator;
 
+import com.intellij.openapi.progress.ProgressIndicator;
+import com.luisppb16.dbseed.ai.OllamaClient;
+import com.luisppb16.dbseed.config.DbSeedSettingsState;
 import com.luisppb16.dbseed.db.Row;
 import com.luisppb16.dbseed.db.generator.ConstraintParser.CheckExpression;
 import com.luisppb16.dbseed.db.generator.ConstraintParser.MultiColumnConstraint;
@@ -12,71 +15,50 @@ import com.luisppb16.dbseed.db.generator.ConstraintParser.ParsedConstraint;
 import com.luisppb16.dbseed.model.Column;
 import com.luisppb16.dbseed.model.RepetitionRule;
 import com.luisppb16.dbseed.model.Table;
+import java.math.BigDecimal;
+import java.sql.JDBCType;
+import java.sql.Types;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.UUID;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
 import net.datafaker.Faker;
 
-/**
- * Sophisticated row generation engine for database seeding operations in the DBSeed plugin.
- * <p>
- * This class implements a comprehensive row generation algorithm that creates realistic
- * database records while respecting complex database constraints, relationships, and business
- * rules. The generator handles primary key uniqueness, foreign key relationships, check
- * constraints, unique constraints, and custom repetition rules. It incorporates advanced
- * data generation techniques using the Faker library and custom dictionary sources to
- * produce meaningful sample data.
- * </p>
- * <p>
- * Key responsibilities include:
- * <ul>
- *   <li>Generating rows that satisfy primary key uniqueness requirements</li>
- *   <li>Resolving multi-column constraints and check expressions</li>
- *   <li>Applying custom repetition rules for specific data patterns</li>
- *   <li>Handling soft-delete column configurations appropriately</li>
- *   <li>Managing foreign key relationships and referential integrity</li>
- *   <li>Implementing sophisticated constraint resolution algorithms</li>
- * </ul>
- * </p>
- * <p>
- * The implementation uses a multi-phase approach to row generation, first applying
- * multi-column constraints, then generating remaining values while validating against
- * all applicable constraints. The generator includes retry mechanisms to handle
- * constraint conflicts and implements efficient duplicate detection for unique keys.
- * Special handling is provided for specific table types like the Mission table with
- * custom relationship constraints.
- * </p>
- */
+/** Sophisticated row generation engine for database seeding operations in the DBSeed plugin. */
+@Slf4j
 public final class RowGenerator {
 
   private static final int MAX_GENERATE_ATTEMPTS = 100;
+  private static final int AI_BATCH_SIZE = 20;
+  private static final int AI_MAX_RETRIES = 5;
 
   private final Table table;
   private final int rowsPerTable;
   private final Set<String> excludedColumns;
   private final List<RepetitionRule> repetitionRules;
-  private final Faker faker;
-  private final Set<java.util.UUID> usedUuids;
-  private final List<String> dictionaryWords;
-  private final boolean useLatinDictionary;
   private final Set<String> softDeleteCols;
   private final boolean softDeleteUseSchemaDefault;
   private final String softDeleteValue;
-  private final int numericScale;
+  private final Set<String> aiColumns;
   private final ValueGenerator valueGenerator;
+  private final OllamaClient ollamaClient;
+  private final String applicationContext;
+  private final ProgressIndicator indicator;
 
-  private final Map<String, ParsedConstraint> constraints;
+  @Getter private final Map<String, ParsedConstraint> constraints;
   private final Predicate<Column> isFkColumn;
   private final List<List<String>> relevantUniqueKeys;
   private final List<MultiColumnConstraint> multiColumnConstraints;
@@ -92,35 +74,44 @@ public final class RowGenerator {
       final Set<String> excludedColumns,
       final List<RepetitionRule> repetitionRules,
       final Faker faker,
-      final Set<java.util.UUID> usedUuids,
+      final Set<UUID> usedUuids,
       final List<String> dictionaryWords,
       final boolean useLatinDictionary,
       final Set<String> softDeleteCols,
       final boolean softDeleteUseSchemaDefault,
       final String softDeleteValue,
-      final int numericScale) {
-    
+      final int numericScale,
+      final Set<String> aiColumns,
+      final OllamaClient ollamaClient,
+      final String applicationContext,
+      final ProgressIndicator indicator) {
+
     this.table = Objects.requireNonNull(table, "Table cannot be null");
     this.rowsPerTable = rowsPerTable;
-    this.excludedColumns = excludedColumns != null ? excludedColumns : Set.of();
-    this.repetitionRules = repetitionRules != null ? repetitionRules : Collections.emptyList();
-    this.faker = Objects.requireNonNull(faker, "Faker cannot be null");
-    this.usedUuids = Objects.requireNonNull(usedUuids, "Used UUIDs set cannot be null");
-    this.dictionaryWords = dictionaryWords != null ? dictionaryWords : Collections.emptyList();
-    this.useLatinDictionary = useLatinDictionary;
-    this.softDeleteCols = softDeleteCols != null ? softDeleteCols : Set.of();
+    this.excludedColumns = Objects.requireNonNullElse(excludedColumns, Set.of());
+    this.repetitionRules = Objects.requireNonNullElse(repetitionRules, List.of());
+    Objects.requireNonNull(faker, "Faker cannot be null");
+    Objects.requireNonNull(usedUuids, "Used UUIDs set cannot be null");
+    this.softDeleteCols = Objects.requireNonNullElse(softDeleteCols, Set.of());
     this.softDeleteUseSchemaDefault = softDeleteUseSchemaDefault;
     this.softDeleteValue = softDeleteValue;
-    this.numericScale = numericScale;
-    this.valueGenerator = new ValueGenerator(faker, dictionaryWords, useLatinDictionary, usedUuids, numericScale);
+    this.aiColumns = Objects.requireNonNullElse(aiColumns, Set.of());
+    final List<String> resolvedDictionaryWords =
+        Objects.requireNonNullElse(dictionaryWords, List.of());
+    this.valueGenerator =
+        new ValueGenerator(
+            faker, resolvedDictionaryWords, useLatinDictionary, usedUuids, numericScale);
+    this.ollamaClient = ollamaClient;
+    this.applicationContext = applicationContext;
+    this.indicator = indicator;
 
     final List<CheckExpression> checkExpressions =
         table.checks().stream()
-            .filter(c -> c != null && !c.isBlank())
+            .filter(c -> Objects.nonNull(c) && !c.isBlank())
             .map(
                 c -> {
                   final String noParens = c.replaceAll("[()]+", " ");
-                  return new CheckExpression(c, noParens, noParens.toLowerCase(java.util.Locale.ROOT));
+                  return new CheckExpression(c, noParens, noParens.toLowerCase(Locale.ROOT));
                 })
             .toList();
 
@@ -145,39 +136,38 @@ public final class RowGenerator {
 
   public List<Row> generate() {
     if (table.columns().isEmpty()) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     processRepetitionRules();
     fillRemainingRows();
+    batchGenerateAiValues();
 
     return rows;
   }
 
-  public Map<String, ParsedConstraint> getConstraints() {
-    return constraints;
-  }
-
   private void processRepetitionRules() {
-    for (final RepetitionRule rule : repetitionRules) {
+    repetitionRules.forEach(rule -> {
       final Map<String, Object> baseValues = new HashMap<>(rule.fixedValues());
 
-      rule.randomConstantColumns()
-          .forEach(
-              colName -> {
-                final Column col = table.column(colName);
-                if (col != null) {
-                  final Object val =
-                      valueGenerator.generateValue(col, constraints.get(colName), generatedCount.get());
-                  baseValues.put(colName, val);
-                }
-              });
+      baseValues.entrySet().forEach(entry -> {
+        if (entry.getValue() instanceof String strValue) {
+          final Column col = table.column(entry.getKey());
+          entry.setValue(parseValue(strValue, col));
+        }
+      });
+
+      rule.randomConstantColumns().forEach(colName -> {
+        final Column col = table.column(colName);
+        final Object val =
+            valueGenerator.generateValue(col, constraints.get(colName), generatedCount.get());
+        baseValues.put(colName, val);
+      });
 
       for (int i = 0; i < rule.count(); i++) {
         int attempts = 0;
         while (attempts < MAX_GENERATE_ATTEMPTS) {
           final Optional<Row> generatedRow = generateAndValidateRowWithBase(baseValues);
-
           if (generatedRow.isPresent()) {
             rows.add(generatedRow.get());
             generatedCount.incrementAndGet();
@@ -186,33 +176,28 @@ public final class RowGenerator {
           attempts++;
         }
       }
-    }
+    });
   }
 
   private void fillRemainingRows() {
     int attempts = 0;
-    while (generatedCount.get() < rowsPerTable
-        && attempts < rowsPerTable * MAX_GENERATE_ATTEMPTS) {
-
-      final Optional<Row> generatedRow = generateAndValidateRow();
-
-      generatedRow.ifPresent(
-          row -> {
-            rows.add(row);
-            generatedCount.incrementAndGet();
-          });
+    while (generatedCount.get() < rowsPerTable && attempts < rowsPerTable * MAX_GENERATE_ATTEMPTS) {
+      generateAndValidateRow().ifPresent(row -> {
+        rows.add(row);
+        generatedCount.incrementAndGet();
+      });
       attempts++;
     }
   }
 
   private Optional<Row> generateAndValidateRow() {
-    return generateAndValidateRowWithBase(Collections.emptyMap());
+    return generateAndValidateRowWithBase(Map.of());
   }
 
   private Optional<Row> generateAndValidateRowWithBase(final Map<String, Object> baseValues) {
     final Map<String, Object> values = new LinkedHashMap<>();
 
-    if (baseValues != null) {
+    if (Objects.nonNull(baseValues)) {
       values.putAll(baseValues);
     }
 
@@ -222,19 +207,12 @@ public final class RowGenerator {
 
     generateRemainingColumnValues(values);
 
-    enforceSpecialMultiColumnConstraints(values);
-
-    if (!validateMultiColumnConstraintValues(values)) {
-      if (!reconcileMultiColumnConstraints(values)) {
-        return Optional.empty();
-      }
-    }
-
-    if (!isPrimaryKeyUnique(values)) {
+    if (!validateMultiColumnConstraintValues(values)
+        && !reconcileMultiColumnConstraints(values)) {
       return Optional.empty();
     }
 
-    if (!areUniqueKeysUnique(values)) {
+    if (!isPrimaryKeyUnique(values) || !areUniqueKeysUnique(values)) {
       return Optional.empty();
     }
 
@@ -242,50 +220,33 @@ public final class RowGenerator {
   }
 
   private boolean validateMultiColumnConstraintValues(final Map<String, Object> values) {
-    if (multiColumnConstraints == null || multiColumnConstraints.isEmpty()) {
+    if (Objects.isNull(multiColumnConstraints) || multiColumnConstraints.isEmpty()) {
       return true;
     }
 
-    for (final MultiColumnConstraint mcc : multiColumnConstraints) {
-      boolean matchesAnyCombination = false;
+    return multiColumnConstraints.stream()
+        .allMatch(
+            mcc ->
+                mcc.allowedCombinations().stream()
+                    .anyMatch(
+                        combo ->
+                            combo.entrySet().stream()
+                                .allMatch(entry -> matchesExpectedValue(values, entry))));
+  }
 
-      for (final Map<String, String> combo : mcc.allowedCombinations()) {
-        boolean matchesCombo = true;
-        for (final Map.Entry<String, String> entry : combo.entrySet()) {
-          final String colName = resolveColumnName(entry.getKey());
-          final String expectedVal = entry.getValue();
-          final Object actualVal = values.get(colName);
-
-          if (actualVal == null) {
-            if (!"NULL".equalsIgnoreCase(expectedVal)) {
-              matchesCombo = false;
-              break;
-            }
-          } else {
-            final String actualStr = String.valueOf(actualVal);
-            if (!actualStr.equals(expectedVal)) {
-              matchesCombo = false;
-              break;
-            }
-          }
-        }
-
-        if (matchesCombo) {
-          matchesAnyCombination = true;
-          break;
-        }
-      }
-
-      if (!matchesAnyCombination) {
-        return false;
-      }
+  private boolean matchesExpectedValue(
+      final Map<String, Object> values, final Map.Entry<String, String> entry) {
+    final String colName = resolveColumnName(entry.getKey());
+    final String expectedVal = entry.getValue();
+    final Object actualVal = values.get(colName);
+    if (Objects.isNull(actualVal)) {
+      return "NULL".equalsIgnoreCase(expectedVal);
     }
-
-    return true;
+    return String.valueOf(actualVal).equals(expectedVal);
   }
 
   private boolean applyMultiColumnConstraints(final Map<String, Object> values) {
-    if (multiColumnConstraints == null || multiColumnConstraints.isEmpty()) {
+    if (Objects.isNull(multiColumnConstraints) || multiColumnConstraints.isEmpty()) {
       return true;
     }
 
@@ -303,7 +264,7 @@ public final class RowGenerator {
                                   return true;
                                 }
                                 final Object actualVal = values.get(colName);
-                                if (actualVal == null) {
+                                if (Objects.isNull(actualVal)) {
                                   return "NULL".equalsIgnoreCase(expectedVal);
                                 }
                                 return String.valueOf(actualVal).equals(expectedVal);
@@ -315,126 +276,115 @@ public final class RowGenerator {
       }
 
       final Map<String, String> selectedCombination =
-          compatibleCombinations.get(ThreadLocalRandom.current().nextInt(compatibleCombinations.size()));
+          compatibleCombinations.get(
+              ThreadLocalRandom.current().nextInt(compatibleCombinations.size()));
 
-      for (Map.Entry<String, String> entry : selectedCombination.entrySet()) {
-        final String colName = resolveColumnName(entry.getKey());
-        final String valStr = entry.getValue();
-
+      selectedCombination.forEach((key, valStr) -> {
+        final String colName = resolveColumnName(key);
         if (!values.containsKey(colName)) {
           final Column col = table.column(colName);
-          if (col != null) {
-            values.put(colName, parseValue(valStr, col));
-          }
+          values.put(colName, parseValue(valStr, col));
         }
-      }
+      });
     }
     return true;
   }
 
   private void generateRemainingColumnValues(final Map<String, Object> values) {
-    table.columns()
-        .forEach(
-            column -> {
-              if (!values.containsKey(column.name())) {
-                final Object value = generateColumnValue(column);
-                values.put(column.name(), value);
+    table.columns().forEach(column -> {
+      if (!values.containsKey(column.name())) {
+        values.put(column.name(), generateColumnValue(column));
+      }
+    });
+  }
+
+  private void batchGenerateAiValues() {
+    if (Objects.isNull(ollamaClient) || aiColumns.isEmpty() || rows.isEmpty()) {
+      return;
+    }
+
+    final int wordCount = DbSeedSettingsState.getInstance().getAiWordCount();
+
+    aiColumns.forEach(colName -> {
+      if (Objects.nonNull(indicator) && indicator.isCanceled()) return;
+
+      final Column col = table.column(colName);
+      if (Objects.isNull(col) || excludedColumns.contains(colName)) return;
+
+      final String sqlType = getSqlTypeName(col.jdbcType());
+      final int totalRows = rows.size();
+      final Set<String> seenAiValues = new HashSet<>();
+
+      for (int batchStart = 0; batchStart < totalRows; batchStart += AI_BATCH_SIZE) {
+        if (Objects.nonNull(indicator) && indicator.isCanceled()) return;
+
+        final int batchEnd = Math.min(batchStart + AI_BATCH_SIZE, totalRows);
+        final int batchCount = batchEnd - batchStart;
+
+        if (Objects.nonNull(indicator)) {
+          indicator.setText2(
+              String.format(
+                  "AI generating %s.%s (%d-%d/%d)",
+                  table.name(), colName, batchStart + 1, batchEnd, totalRows));
+        }
+
+        final List<String> allValues = new ArrayList<>();
+        int retries = 0;
+
+        while (allValues.size() < batchCount && retries < AI_MAX_RETRIES) {
+          if (Objects.nonNull(indicator) && indicator.isCanceled()) return;
+
+          final int remaining = batchCount - allValues.size();
+          try {
+            final List<String> batchValues =
+                ollamaClient
+                    .generateBatchValues(
+                        applicationContext, table.name(), colName, sqlType, wordCount, remaining)
+                    .join();
+
+            if (batchValues.isEmpty()) {
+              retries++;
+              continue;
+            }
+            boolean addedAny = false;
+            for (final String v : batchValues) {
+              if (seenAiValues.add(v)) {
+                allValues.add(v);
+                addedAny = true;
               }
-            });
-  }
-
-  private Integer getStatusCorrespondingId(final String statusValue) {
-    if (statusValue == null) return null;
-    
-    return switch (statusValue.toLowerCase()) {
-      case "planning" -> 1;
-      case "conduction" -> 2;
-      case "complete" -> 3;
-      default -> null;
-    };
-  }
-
-  private String getIdCorrespondingStatus(final Integer statusIdValue) {
-    if (statusIdValue == null) return null;
-    
-    return switch (statusIdValue) {
-      case 1 -> "Planning";
-      case 2 -> "Conduction";
-      case 3 -> "Complete";
-      default -> null;
-    };
-  }
-
-  /**
-   * Enforces special multi-column constraints after all values are generated
-   * This ensures that any inconsistencies are corrected before validation
-   */
-  private void enforceSpecialMultiColumnConstraints(final Map<String, Object> values) {
-    // Check if this is the Mission table and we have the relevant columns
-    if ("Mission".equalsIgnoreCase(table.name())) {
-      final Column statusColumn = table.column("missionStatus");
-      final Column statusIdColumn = table.column("missionStatusId");
-
-      if (statusColumn != null && statusIdColumn != null) {
-        final Object statusValue = values.get("missionStatus");
-        final Object statusIdValue = values.get("missionStatusId");
-
-        if (statusValue != null && statusIdValue != null) {
-          // Both values exist, check if they're consistent
-          final String statusStr = String.valueOf(statusValue);
-          
-          final Integer statusIdInt;
-          if (statusIdValue instanceof Integer) {
-            statusIdInt = (Integer) statusIdValue;
-          } else if (statusIdValue instanceof String) {
-            try {
-              statusIdInt = Integer.parseInt((String) statusIdValue);
-            } catch (final NumberFormatException e) {
-              return;
             }
-          } else {
-            return;
-          }
-
-
-          final String expectedStatusForId = getIdCorrespondingStatus(statusIdInt);
-          
-          if (expectedStatusForId != null && !expectedStatusForId.equals(statusStr)) {
-            values.put("missionStatus", expectedStatusForId);
-          }
-        } else if (statusValue != null && statusIdValue == null) {
-          final String statusStr = String.valueOf(statusValue);
-          final Integer correspondingId = getStatusCorrespondingId(statusStr);
-          if (correspondingId != null) {
-            values.put("missionStatusId", correspondingId);
-          }
-        } else if (statusValue == null && statusIdValue != null) {
-          final Integer statusIdInt;
-          if (statusIdValue instanceof Integer) {
-            statusIdInt = (Integer) statusIdValue;
-          } else if (statusIdValue instanceof String) {
-            try {
-              statusIdInt = Integer.parseInt((String) statusIdValue);
-            } catch (final NumberFormatException e) {
-              return;
+            if (!addedAny) {
+              retries++;
             }
-          } else {
-            return;
+          } catch (final Exception ex) {
+            log.warn(
+                "Batch AI generation failed for {}.{}: {}",
+                table.name(),
+                colName,
+                ex.getMessage());
+            retries++;
           }
-          final String correspondingStatus = getIdCorrespondingStatus(statusIdInt);
-          if (correspondingStatus != null) {
-            values.put("missionStatus", correspondingStatus);
-          }
-        } else if (statusValue == null && statusIdValue == null) {
-          final String[] validStatuses = {"Planning", "Conduction", "Complete"};
-          final int randomIndex = ThreadLocalRandom.current().nextInt(validStatuses.length);
-          final String statusStr = validStatuses[randomIndex];
-          final Integer statusIdInt = randomIndex + 1; // 1, 2, 3 for Planning, Conduction, Complete
+        }
 
-          values.put("missionStatus", statusStr);
-          values.put("missionStatusId", statusIdInt);
+        for (int i = 0; i < Math.min(allValues.size(), batchCount); i++) {
+          final String val = allValues.get(i);
+          if (Objects.nonNull(val) && !val.isBlank()) {
+            String finalValue = val.trim();
+            if (col.length() > 0 && finalValue.length() > col.length()) {
+              finalValue = finalValue.substring(0, col.length());
+            }
+            rows.get(batchStart + i).values().put(colName, finalValue);
+          }
         }
       }
+    });
+  }
+
+  private String getSqlTypeName(final int jdbcType) {
+    try {
+      return JDBCType.valueOf(jdbcType).getName();
+    } catch (final Exception ignored) {
+      return "UNKNOWN";
     }
   }
 
@@ -445,34 +395,31 @@ public final class RowGenerator {
     if (isFkColumn.test(column) && !column.primaryKey()) {
       return null;
     }
-
     if (softDeleteCols.contains(column.name())) {
       return valueGenerator.generateSoftDeleteValue(
           column, softDeleteUseSchemaDefault, softDeleteValue);
     }
-
-    return valueGenerator.generateValue(column, constraints.get(column.name()), generatedCount.get());
+    return valueGenerator.generateValue(
+        column, constraints.get(column.name()), generatedCount.get());
   }
 
   private String resolveColumnName(final String constraintColName) {
     final Column col = table.column(constraintColName);
-    return col != null ? col.name() : constraintColName;
+    return Objects.nonNull(col) ? col.name() : constraintColName;
   }
 
   private Object parseValue(final String value, final Column column) {
-    if (value == null || "NULL".equalsIgnoreCase(value)) return null;
+    if (Objects.isNull(value) || "NULL".equalsIgnoreCase(value)) return null;
     try {
       return switch (column.jdbcType()) {
-        case java.sql.Types.INTEGER, java.sql.Types.SMALLINT, java.sql.Types.TINYINT ->
-            Integer.parseInt(value);
-        case java.sql.Types.BIGINT -> Long.parseLong(value);
-        case java.sql.Types.BOOLEAN, java.sql.Types.BIT -> Boolean.parseBoolean(value);
-        case java.sql.Types.DECIMAL, java.sql.Types.NUMERIC -> new java.math.BigDecimal(value);
-        case java.sql.Types.FLOAT, java.sql.Types.DOUBLE, java.sql.Types.REAL ->
-            Double.parseDouble(value);
+        case Types.INTEGER, Types.SMALLINT, Types.TINYINT -> Integer.parseInt(value);
+        case Types.BIGINT -> Long.parseLong(value);
+        case Types.BOOLEAN, Types.BIT -> Boolean.parseBoolean(value);
+        case Types.DECIMAL, Types.NUMERIC -> new BigDecimal(value);
+        case Types.FLOAT, Types.DOUBLE, Types.REAL -> Double.parseDouble(value);
         default -> value;
       };
-    } catch (final Exception e) {
+    } catch (final Exception ignored) {
       return null;
     }
   }
@@ -490,94 +437,77 @@ public final class RowGenerator {
 
   private boolean areUniqueKeysUnique(final Map<String, Object> values) {
     for (final List<String> uniqueKeyColumns : relevantUniqueKeys) {
-      final String uniqueKeyCombination =
+      final String combination =
           uniqueKeyColumns.stream()
               .map(ukCol -> Objects.toString(values.get(ukCol), "NULL"))
               .collect(Collectors.joining("|"));
       final Set<String> seenCombinations =
           seenUniqueKeyCombinations.computeIfAbsent(
               String.join("__", uniqueKeyColumns), k -> new HashSet<>());
-      if (!seenCombinations.add(uniqueKeyCombination)) {
+      if (!seenCombinations.add(combination)) {
         return false;
       }
     }
     return true;
   }
 
-  /**
-   * Reconciles multi-column constraints by overriding conflicting values with valid combinations
-   */
   private boolean reconcileMultiColumnConstraints(final Map<String, Object> values) {
-    if (multiColumnConstraints == null || multiColumnConstraints.isEmpty()) {
+    if (Objects.isNull(multiColumnConstraints) || multiColumnConstraints.isEmpty()) {
       return true;
     }
 
     final Set<String> resolvedColumns = new HashSet<>();
+
     for (final MultiColumnConstraint mcc : multiColumnConstraints) {
       resolvedColumns.clear();
-      for (final String c : mcc.columns()) {
-        resolvedColumns.add(resolveColumnName(c));
-      }
+      mcc.columns().forEach(c -> resolvedColumns.add(resolveColumnName(c)));
 
-      final List<Map<String, String>> compatibleCombinations = new ArrayList<>();
-
-      for (Map<String, String> combo : mcc.allowedCombinations()) {
-        boolean isCompatible = true;
-
-        for (Map.Entry<String, String> entry : combo.entrySet()) {
-          final String colName = resolveColumnName(entry.getKey());
-          final String expectedVal = entry.getValue();
-
-          if (resolvedColumns.contains(colName)) {
-            final Object actualVal = values.get(colName);
-
-            if (actualVal != null && !String.valueOf(actualVal).equals(expectedVal)) {
-              isCompatible = false;
-              break;
-            }
-          }
-        }
-
-        if (isCompatible) {
-          compatibleCombinations.add(combo);
-        }
-      }
+      final List<Map<String, String>> compatibleCombinations =
+          mcc.allowedCombinations().stream()
+              .filter(
+                  combo ->
+                      combo.entrySet().stream()
+                          .allMatch(
+                              entry -> {
+                                final String colName = resolveColumnName(entry.getKey());
+                                if (!resolvedColumns.contains(colName)) return true;
+                                final Object actualVal = values.get(colName);
+                                return Objects.isNull(actualVal)
+                                    || String.valueOf(actualVal).equals(entry.getValue());
+                              }))
+              .toList();
 
       if (compatibleCombinations.isEmpty()) {
-        if (!mcc.allowedCombinations().isEmpty()) {
-          final Map<String, String> selectedCombination = mcc.allowedCombinations().get(0);
-
-          for (Map.Entry<String, String> entry : selectedCombination.entrySet()) {
-            final String colName = resolveColumnName(entry.getKey());
-            final String valStr = entry.getValue();
-
-            if (resolvedColumns.contains(colName)) {
-              final Column col = table.column(colName);
-              if (col != null) {
-                values.put(colName, parseValue(valStr, col));
-              }
-            }
-          }
-        } else {
+        if (mcc.allowedCombinations().isEmpty()) {
           return false;
         }
+        applyCombinationValues(mcc.allowedCombinations().getFirst(), resolvedColumns, values);
       } else {
         final Map<String, String> selectedCombination =
-            compatibleCombinations.get(ThreadLocalRandom.current().nextInt(compatibleCombinations.size()));
-
-        for (Map.Entry<String, String> entry : selectedCombination.entrySet()) {
-          final String colName = resolveColumnName(entry.getKey());
-          final String valStr = entry.getValue();
-
+            compatibleCombinations.get(
+                ThreadLocalRandom.current().nextInt(compatibleCombinations.size()));
+        selectedCombination.forEach((key, valStr) -> {
+          final String colName = resolveColumnName(key);
           if (resolvedColumns.contains(colName) && !values.containsKey(colName)) {
             final Column col = table.column(colName);
-            if (col != null) {
-              values.put(colName, parseValue(valStr, col));
-            }
+            values.put(colName, parseValue(valStr, col));
           }
-        }
+        });
       }
     }
     return true;
+  }
+
+  private void applyCombinationValues(
+      final Map<String, String> combination,
+      final Set<String> resolvedColumns,
+      final Map<String, Object> values) {
+    combination.forEach((key, valStr) -> {
+      final String colName = resolveColumnName(key);
+      if (resolvedColumns.contains(colName)) {
+        final Column col = table.column(colName);
+        values.put(colName, parseValue(valStr, col));
+      }
+    });
   }
 }
